--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@syrup/letter-aneh",
+  "name": "@mioun/letter-aneh",
   "version": "1.0.0",
   "description": "A simple Package",
   "main": "index.js",
