--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@mioun/letter-aneh",
-  "version": "1.0.0",
+  "version": "1.0.1-dev",
   "description": "A simple Package",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "Syrup#4506",
+  "author": "Mioun",
   "license": "MIT",
   "dependencies": {
     "@kagchi/kag-api": "^1.1.1",
